Bug 434046 - "File already exists" is freezing
Summary: "File already exists" is freezing
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-06 07:22 UTC by roman
Modified: 2021-03-10 18:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments
unresponsive dialog (67.47 KB, image/png)
2021-03-06 07:22 UTC, roman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description roman 2021-03-06 07:22:46 UTC
Created attachment 136428 [details]
unresponsive dialog

SUMMARY

Since a month or two the "file already exists" dialog gets unresponsive so I can't select any action (like skip, rename, overwrite, cancel). 

STEPS TO REPRODUCE
1. Create two folders
2. Place the same image in each of them
3. Select both images (either by unfold both folders or through the search function
4. open with gwenview via the right mouse click menu 

OBSERVED RESULT

The "File already exists" dialog is not responding to any action.

EXPECTED RESULT

The "File already exists" shouldn't be unresponsive.


SOFTWARE/OS VERSIONS

KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
I am on openSUSE Tumbleweed on a 3 day old installation. 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2021-03-06 10:40:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/46
Comment 2 Méven Car 2021-03-10 18:25:48 UTC
Git commit 63c458e628d1159fed602ede30229328b8186812 by Méven Car.
Committed on 06/03/2021 at 10:40.
Pushed by ngraham into branch 'master'.

When receiving a list of files as parameters, filter duplicate filenames

M  +7    -2    app/main.cpp

https://invent.kde.org/graphics/gwenview/commit/63c458e628d1159fed602ede30229328b8186812