When receiving a list of files as parameters, filter duplicate filenames

BUG: 434046